# qiita-calender-2023

./: .gitmodules  README.md  pyproject.toml
01-JMA_data_analytics/: 01-stationarity.ipynb  02-autocorr.ipynb  03-fourier.ipynb  04-AR.ipynb  05-MA.ipynb  06-ARIMA.ipynb  07-SARIMA.ipynb
01-JMA_data_analytics/data/: daylight.csv  dew.csv  humidity.csv  local-pressure.csv  precipitation.csv  sea-pressure.csv  temperature-2013.csv  temperature-2014.csv  temperature-2015.csv  temperature-2016.csv  temperature-2017.csv  temperature-2018.csv  temperature-2019.csv  temperature-2020.csv  temperature-2021.csv  temperature-2022.csv  temperature-2023.csv  temperature.csv  vapor.csv  weather.csv  wind.csv
02-weathermap/: generate-gif.py
02-weathermap/data/: collect-data.py
03-YOLP/: appid.json  get.py  visualize.ipynb
04-distance/: calc.py
05-cartpy/: plot.ipynb
06-forecast_eval/: eval.ipynb
07-vorticity/: code.ipynb
09-beacon2/: README.md  get.py  output20240315.txt  visualize.ipynb
10-rainfall/: 2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  code.ipynb
11-emagram/: emagram.ipynb
