[tool.poetry]
name = "qiita-calender-2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.2"
requests = "^2.31.0"
tqdm = "^4.66.2"
cartopy = "^0.23.0"
xarray = "^2024.3.0"
gspread = "^6.1.0"
oauth2client = "^4.1.3"
ipython = "^8.23.0"
streamlit = "^1.33.0"
bleak = {version = "^0.21.1", python = ">=3.8,<3.13"}
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
